navbar logout position mobile correction

--- a/app/javascript/Pages/components/Navbar/navbar.scss
+++ b/app/javascript/Pages/components/Navbar/navbar.scss
@@ -143,11 +143,14 @@
           }
         }
 
-        .btn-logout {
-          padding: 2rem 2rem 2rem 0;
+        .logout {
           width: 100%;
-          display: table;
-          font-size: 16px;
+
+          .btn-logout {
+            padding: 2rem 2rem 2rem 0;
+            display: table;
+            left: 0;
+          }
         }
       }
     }
